force-app/main/default/objects/Todo_Item__c/Todo_Item__c.object-meta.xml
<CustomObject>
    <description>Custom object to store personal to-do tasks for the Learning Lab portfolio project.</description>
    <label>Todo Item</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Todo Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>