force-app/main/default/objects/Todo_Item__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <inlineHelpText>Date when task was marked complete</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>