force-app/main/default/objects/Todo_Item__c/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark when task is complete</inlineHelpText>
    <label>Is Completed</label>
    <type>Checkbox</type>
</CustomField>